fix notes search box style on mobile again

--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ body#notes-index ul#notes-list li .notetaker {
 }
 
 .search-n-sort input {
-  width:190px!important;
+  width:180px!important;
 }
 
 .search-n-sort a {
